--- a/index.html
+++ b/index.html
@@ -406,6 +406,7 @@
             <input type="hidden" name="_subject" value="Nuevo mensaje desde tu sitio web Flavorino Web">
             <input type="hidden" name="_autoresponse" value="¡Gracias por comunicarte con el equipo de Flavorino Web!">
             <input type="hidden" name="_next" value="https://flavordeveloper.github.io/Landing-Page/">
+            <input type="hidden" name="_captcha" value="false">
 
             <div class="spinner" id="spinner">
                 <div class="bounce1"></div>
