--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         </video>
         
         <nav class="rss-container" aria-label="Redes sociales">
-            <a href="#" class="rss-link"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#" class="rss-link"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#" class="rss-link"><i class="fa-brands fa-tiktok"></i></a>
-            <a href="#" class="rss-link"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://www.instagram.com/flavorinoweb/" class="rss-link" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a class="rss-link"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.tiktok.com/@flavorino_web" class="rss-link" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+            <a class="rss-link"><i class="fa-brands fa-x-twitter"></i></a>
         </nav>
         
             <picture class="texts-container">
@@ -357,10 +357,10 @@
             <p class="footer-paragraph footer-paragraph--weigth">Flavorino Web es una empresa que ofrece servicios freelancer de creación de páginas web. Especializada en diseño moderno y funcional, desarrolla sitios responsivos y personalizados para emprendedores y pequeñas empresas, garantizando calidad y adaptabilidad a cada proyecto.</p>
 
             <div class="rss-footer-container">
-                <a href="#" class="rss-link"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#" class="rss-link"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#" class="rss-link"><i class="fa-brands fa-tiktok"></i></a>
-                <a href="#" class="rss-link"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.instagram.com/flavorinoweb/" class="rss-link" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a class="rss-link"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.tiktok.com/@flavorino_web" class="rss-link" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+                <a class="rss-link"><i class="fa-brands fa-x-twitter"></i></a>
             </div>
         </div>
 
@@ -424,10 +424,7 @@
     rel="noopener noreferrer">
         <img src="assets/iconoWhatsapp.svg" 
             alt="Botón de WhatsApp" 
-            class="whatsapp-btn-img fa-fade"
-            loading="lazy"
-            width="64" 
-            height="64">
+            class="whatsapp-btn-img fa-fade">
     </a>
 
 </body>
