--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
             </div>
         </div>
 
-        <form class="contact-form" action="https://formsubmit.co/flavorinoweb@gmail.com" method="POST" id="form">
+        <form class="contact-form" id="form">
             <div class="form-group">
                 <label for="nombre">Nombre</label>
                 <input type="text" id="nombre" name="nombre" placeholder="Jhon">
