--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                         <img src="assets/fotoperfilMujer1.webp" 
                             class="item-1-pic-imagen"></img>
                     </div>
-                    <p class="item-1-paragraph-2">Mayo Smith</p>
+                    <p class="item-1-paragraph-2">Alejandra Díaz</p>
                 </div>
 
                 <!-- Item 2 -->
