--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                         alt="Icono de testimonio" 
                         class="item-1-image">
                     <p class="item-1-paragraph">
-                        El servicio de Community Management y diseño gráfico que ofrecen es excepcional. Nos ayudaron a aumentar nuestro alcance en redes sociales y a mejorar nuestra imagen de marca. ¡Un equipo increíble!"
+                        El servicio de Community Management y diseño gráfico de Flavorino Web es excepcional. Nos ayudaron a aumentar nuestro alcance en redes sociales y a mejorar nuestra imagen de marca. Su equipo trabajó con nosotros, recomendados!"&nbsp;
                     </p>
                     <div class="item-1-pic">
                         <img src="assets/fotoperfilHombre.webp" 
