--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles/style.css">
     
     <!-- Optimización de scripts -->
-    <script src="JS/app.js" defer type="module"></script>
+    <script src="js/app.js" defer type="module"></script>
 
     <!-- Optimizaciones de precarga -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
