--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <i class="fa-solid fa-mobile-screen-button"></i>
             <div class="section-4-txt-container">
                 <h2 id="section4-heading" class="section-4-title">Empecemos</h2>
-                <p class="section-4-paragraph">¿Tiene un proyecto innovador en mente o está buscando establecer una asociación estratégica para llevar sus ideas al siguiente nivel? En nuestro equipo, estamos listos para escuchar sus necesidades y ofrecer soluciones personalizadas que se adapten a sus objetivos. <br> No dude en contactarnos hoy mismo.</p>
+                <p class="section-4-paragraph">¿Tiene un proyecto innovador en mente o está buscando establecer una asociación estratégica para llevar sus ideas al siguiente nivel? En nuestro equipo, estamos listos para escuchar sus necesidades y ofrecer soluciones personalizadas que se adapten a sus objetivos. No dude en contactarnos hoy mismo.</p>
                 <a href="#footer" class="section-4-cta">contáctenos</a>
             </div>
         </div>
@@ -253,10 +253,9 @@
                 <div class="section-5-grid-2">
                     <div class="section-5-content-2">
                         <h2 class="section-5-title-2">Soluciones digitales creativas</h2>
-                        <p class="section-5-paragraph-2">Creamos estrategias personalizadas para gestionar tus redes sociales, diseñamos contenido visual impactante, y desarrollamos sitios web modernos y funcionales. Nos aseguramos de que tu marca se destaque con un diseño coherente, atractiva y enfocado en la conversión de clientes. Con Flavorino Web, tu presencia digital será más fuerte y efectiva que nunca. <br><br>
-                        
-                        Nuestro equipo está compuesto por expertos en marketing digital, diseñadores gráficos y desarrolladores web, todos comprometidos con brindar soluciones innovadoras para cada uno de nuestros clientes. Trabajamos en estrecha colaboración contigo para llevar tu negocio al siguiente nivel.
-                        </p>
+                        <p class="section-5-paragraph-2">Creamos estrategias personalizadas para gestionar tus redes sociales, diseñamos contenido visual impactante, y desarrollamos sitios web modernos y funcionales. Nos aseguramos de que tu marca se destaque con un diseño coherente, atractiva y enfocado en la conversión de clientes. Con Flavorino Web, tu presencia digital será más fuerte y efectiva que nunca.
+
+                        Nuestro equipo está compuesto por expertos en marketing digital, diseñadores gráficos y desarrolladores web, todos comprometidos con brindar soluciones innovadoras para cada uno de nuestros clientes. Trabajamos en estrecha colaboración contigo para llevar tu negocio al siguiente nivel.</p>
                         <i class="fa-solid fa-angles-left fa-angles-left--5"></i>
                     </div>
                 </div>
