--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <i class="fa-solid fa-mobile-screen-button"></i>
             <div class="section-4-txt-container">
                 <h2 id="section4-heading" class="section-4-title">Empecemos</h2>
-                <p class="section-4-paragraph">¿Tiene un proyecto innovador en mente o está buscando establecer una asociación estratégica para llevar sus ideas al siguiente nivel? En flavorino, estamos listos para escuchar sus necesidades y ofrecer soluciones personalizadas que se adapten a sus objetivos. No dude en contactarnos hoy mismo.</p>
+                <p class="section-4-paragraph">¿Tiene un proyecto innovador en mente o está buscando establecer una asociación estratégica para llevar sus ideas al siguiente nivel? En flavorino web, estamos listos para escuchar sus necesidades y ofrecer soluciones personalizadas que se adapten a sus objetivos. No dude en contactarnos hoy mismo.</p>
                 <a href="#footer" class="section-4-cta">contáctenos</a>
             </div>
         </div>
