--- a/index.html
+++ b/index.html
@@ -320,6 +320,53 @@
         </div>
     </section>
 
+<!-- Carrusel de marcas. -->
+    <div class="marcas-container">
+
+        <div class="marcas-track">
+            <!-- Marca 1. -->
+            <div class="marca">
+                <img class="marca-img" src="assets/Javascript-logo.svg" alt="Javascript-logo">
+            </div>
+
+            <!-- Marca 2. -->
+            <div class="marca">
+                <img class="marca-img" src="assets/Adobe-logo.svg" alt="Adobe-logo">
+            </div>
+
+            <!-- Marca 3. -->
+            <div class="marca">
+                <img class="marca-img" src="assets/Wondershare-logo.svg" alt="Wondershare-logo">
+            </div>
+
+            <!-- Marca 4. -->
+            <div class="marca">
+                <img class="marca-img" src="assets/Comunity-logo.png" alt="Comunity-logo">
+            </div>
+
+            <!-- Duplicado de marcas. -->
+            <!-- Marca 1. -->
+            <div class="marca">
+                <img class="marca-img" src="assets/Javascript-logo.svg" alt="Javascript-logo">
+            </div>
+
+            <!-- Marca 2. -->
+            <div class="marca">
+                <img class="marca-img" src="assets/Adobe-logo.svg" alt="Adobe-logo">
+            </div>
+
+            <!-- Marca 3. -->
+            <div class="marca">
+                <img class="marca-img" src="assets/Wondershare-logo.svg" alt="Wondershare-logo">
+            </div>
+
+            <!-- Marca 4. -->
+            <div class="marca">
+                <img class="marca-img" src="assets/Comunity-logo.png" alt="Comunity-logo">
+            </div>
+        </div>
+    </div>
+
 <!-- Seccion 7 -->
     <section class="section-7" aria-labelledby="section7-heading">
         <div class="section-7-slider-container">
