--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
     <footer class="footer" id="footer">
         <div class="footer-texts-container">
             <h2 class="footer-title">Ponerse en contacto</h2>
-            <p class="footer-paragraph">Podemos garantizar confiabilidad, <br> tarifas de bajo costo y, lo que es más importante, <br> pensando en la seguridad y la comodidad.</p>
+            <!-- <p class="footer-paragraph">Podemos garantizar confiabilidad, <br> tarifas de bajo costo y, lo que es más importante, <br> pensando en la seguridad y la comodidad.</p> -->
             <p class="footer-paragraph footer-paragraph--weigth">Flavorino Web es una empresa que ofrece servicios freelancer de creación de páginas web. Especializada en diseño moderno y funcional, desarrolla sitios responsivos y personalizados para emprendedores y pequeñas empresas, garantizando calidad y adaptabilidad a cada proyecto.</p>
 
             <div class="rss-footer-container">
@@ -455,12 +455,12 @@
         </p>
     </div>
 
-    <!-- Boton arriba -->
+<!-- Boton arriba -->
     <a href="#" aria-label="Volver al inicio">
         <i class="fa-regular fa-circle-up fa-bounce"></i>
     </a>
 
-    <!-- Boton whatsapp -->
+<!-- Boton whatsapp -->
     <a href="https://wa.me/123456?text=¡Hola!%20Nesecito%20información." 
     class="whatsapp-btn" 
     target="_blank" 
