--- a/index.html
+++ b/index.html
@@ -212,22 +212,22 @@
         <div class="carousel">
             <picture>
                 <source media="(min-width: 768px)" srcset="assets/foto3-desktop.webp">
-                <img src="assets/foto3-mobile.webp" alt="Diseño web profesional" class="carousel-img">
+                <img src="assets/foto3-desktop.webp" alt="Diseño web profesional" class="carousel-img">
             </picture>
 
             <picture>
                 <source media="(min-width: 768px)" srcset="assets/foto4-desktop.webp">
-                <img src="assets/foto4-mobile.webp" alt="Desarrollo móvil">
+                <img src="assets/foto4-desktop.webp" alt="Desarrollo móvil">
             </picture>
 
             <picture>
                 <source media="(min-width: 768px)" srcset="assets/foto5-desktop.webp">
-                <img src="assets/foto5-mobile.webp" alt="Optimización SEO">
+                <img src="assets/foto5-desktop.webp" alt="Optimización SEO">
             </picture>
 
             <picture>
                 <source media="(min-width: 768px)" srcset="assets/foto6-desktop.webp">
-                <img src="assets/foto6-mobile.webp" alt="Soporte técnico">
+                <img src="assets/foto6-desktop.webp" alt="Soporte técnico">
             </picture>
         </div>
     </article>
