--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                             <small class="item-text-small">Diseños adaptados a tus necesidades</small>
                         </div>
 
-                        <a href="#" class="item-link-cta">LEE MAS</a>
+                        <a href="#" class="item-link-cta">LEE MÁS</a>
                     </div>
                 </div>
             </div>
